// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LaunchPage does not render mission ids when launch does not have mission ids 1`] = `
<DocumentFragment>
  <div>
    <div
      class="LaunchPage-headline-275 headline"
    >
      <img
        alt="Test"
        class="LaunchPage-missionPatch-276 missionPatch"
        src="missionPatch"
      />
      <h4
        class="MuiTypography-root LaunchPage-missionName-277 missionName MuiTypography-h4"
      >
        Test
      </h4>
    </div>
    <h6
      class="MuiTypography-root LaunchPage-date-279 date MuiTypography-subtitle1"
    >
      <span>
        Tue, 01 Jan 2019 00:00:00 GMT
      </span>
    </h6>
    <div
      class="LaunchPage-statusMissionIds-280 statusMissionIds"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 LaunchStatus-status-325 LaunchStatus-success-328 MuiPaper-rounded"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root LaunchStatus-statusIcon-326"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
          />
        </svg>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      Details
    </p>
  </div>
</DocumentFragment>
`;

exports[`LaunchPage does not render mission patch when there is no mission patch 1`] = `
<DocumentFragment>
  <div>
    <div
      class="LaunchPage-headline-93 headline"
    >
      <h4
        class="MuiTypography-root LaunchPage-missionName-95 missionName MuiTypography-h4"
      >
        Test
      </h4>
    </div>
    <h6
      class="MuiTypography-root LaunchPage-date-97 date MuiTypography-subtitle1"
    >
      <span>
        Tue, 01 Jan 2019 00:00:00 GMT
      </span>
    </h6>
    <div
      class="LaunchPage-statusMissionIds-98 statusMissionIds"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 LaunchStatus-status-143 LaunchStatus-success-146 MuiPaper-rounded"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root LaunchStatus-statusIcon-144"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
          />
        </svg>
      </div>
      <div
        class="LaunchPage-missionIds-99 missionIds"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
        >
          ID: id1
        </p>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      Details
    </p>
  </div>
</DocumentFragment>
`;

exports[`LaunchPage renders 1`] = `
<DocumentFragment>
  <div>
    <div
      class="LaunchPage-headline-1 headline"
    >
      <img
        alt="Test"
        class="LaunchPage-missionPatch-2 missionPatch"
        src="missionPatch"
      />
      <h4
        class="MuiTypography-root LaunchPage-missionName-3 missionName MuiTypography-h4"
      >
        Test
      </h4>
    </div>
    <h6
      class="MuiTypography-root LaunchPage-date-5 date MuiTypography-subtitle1"
    >
      <span>
        Tue, 01 Jan 2019 00:00:00 GMT
      </span>
    </h6>
    <div
      class="LaunchPage-statusMissionIds-6 statusMissionIds"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 LaunchStatus-status-51 LaunchStatus-success-54 MuiPaper-rounded"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root LaunchStatus-statusIcon-52"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
          />
        </svg>
      </div>
      <div
        class="LaunchPage-missionIds-7 missionIds"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
        >
          ID: id1
        </p>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      Details
    </p>
  </div>
</DocumentFragment>
`;

exports[`LaunchPage renders a loader when is loading a launch 1`] = `
<DocumentFragment>
  <div
    class="Loader-root-192"
  >
    <div
      class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
      role="progressbar"
      style="width: 40px; height: 40px;"
    >
      <svg
        class="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LaunchPage renders error message when there is an error 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    Not Found
  </p>
</DocumentFragment>
`;

exports[`LaunchPage renders redirect to home page when launch is tentative 1`] = `<DocumentFragment />`;
